[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layerv-qurl"
version = "0.1.0"
description = "Python SDK for the QURL API - secure, time-limited access links"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LayerV AI", email = "engineering@layerv.ai" },
]
keywords = ["qurl", "layerv", "security", "ai-agents", "zero-trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3,<2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.11",
    "mypy>=1.14",
]

[project.urls]
Homepage = "https://github.com/layervai/qurl-python"
Repository = "https://github.com/layervai/qurl-python"
Documentation = "https://docs.layerv.ai"

[tool.hatch.build.targets.wheel]
packages = ["src/layerv_qurl"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
